--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "js-sha256": "^0.9.0",
+    "pathfinding": "^0.4.18",
     "sha256": "^0.2.0"
   }
 }
