--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,8 +14,14 @@
     "express": "^4.17.1",
     "file-system": "^2.2.2",
     "js-sha256": "^0.9.0",
-    "request": "^2.88.0",
     "pathfinding": "^0.4.18",
-    "sha256": "^0.2.0"
+    "recombee-api-client": "^2.4.1",
+    "request": "^2.88.0",
+    "sha256": "^0.2.0",
+    "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0"
   }
 }
