--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,9 +16,10 @@
     "file-system": "^2.2.2",
     "js-sha256": "^0.9.0",
     "pathfinding": "^0.4.18",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
+    "recombee-api-client": "^2.4.1",
     "request": "^2.88.0",
     "sha256": "^0.2.0",
-    "recombee-api-client": "^2.4.1",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
