--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,10 +15,11 @@
     "express": "^4.17.1",
     "file-system": "^2.2.2",
     "js-sha256": "^0.9.0",
+    "mongodb": "^3.5.1",
     "pathfinding": "^0.4.18",
+    "recombee-api-client": "^2.4.1",
     "request": "^2.88.0",
     "sha256": "^0.2.0",
-    "recombee-api-client": "^2.4.1",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
